--- a/day3project.html
+++ b/day3project.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="day3project.css">
-    <link rel="icon" href"C:\Users\shini\OneDrive\Desktop\Day3Project\flowericon.png">
+    <link rel="icon" href="C:\Users\shini\OneDrive\Desktop\Day3Project\flowericon.png">
    <title>Flower Descriptions</title>
 </head>
 <body class="page">
